# valg

./: HOW_TO.md  README.md  pyproject.toml
tests/: test_valg.py
valg/: main.py
