[tool.poetry]
name = "valg"
version = "0.1.0"
description = ""
authors = ["Mateus Valgueiro <mvt@cesar.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
valg = "valg.main:app"
